Fix printing. This might be an unwanted change as it shows a print preview. Logic borrowed from Mailody.

BUG: 223809
CCMAIL: mcguire@kde.org


svn path=/trunk/KDE/kdepim/messageviewer/; revision=1081456